maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: missing parameter type for expanded function
The argument types of an anonymous function must be fully known. (SLS 8.5)
Expected type was: ?
    if (getIndication(x,y) == "9999") {
                                      ^